--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: a distill-style blog post
+title: A Distill-style Blog Post
 description: an example of a distill-style blog post and main elements
 tags: distill formatting
 giscus_comments: true
