Update tag setting

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -2,7 +2,7 @@
 layout: distill
 title: A Distill-style Blog Post
 description: an example of a distill-style blog post and main elements
-tags: distill formatting
+tags: language-model
 giscus_comments: true
 date: 2021-05-22
 featured: true
