--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,9 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@misc{gregor2015drawrecurrentneuralnetwork,
+      title={DRAW: A Recurrent Neural Network For Image Generation}, 
+      author={Karol Gregor and Ivo Danihelka and Alex Graves and Danilo Jimenez Rezende and Daan Wierstra},
+      year={2015},
+      eprint={1502.04623},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1502.04623}, 
 }
